# rules_nodejs_issue_1871

./: WORKSPACE  package-lock.json  package.json
src/: BUILD.bazel  main.ts
